adding security suggestion

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,5 +20,5 @@ jobs:
       - run: |
           TAG=0.1.$CIRCLE_BUILD_NUM
           docker build -t wsharp007/fancy-api:$TAG .
-          docker login -u $DOCKER_USER -p $DOCKER_PASS
+          docker login -u $DOCKER_USER --password-stdin $DOCKER_PASS
           docker push wsharp007/fancy-api:$TAG
